<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    style="@style/VerticalList"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        style="@style/H2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_settings" />

    <View style="@style/SeparatorListVertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout style="@style/VerticalList">

            <com.rama.txori_zero.widgets.WdCollapsibleSection
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultExpanded="true"
                app:header="@string/header_system"
                app:key="settings:section:system">

                <com.rama.txori_zero.widgets.WdCheckbox
                    android:id="@+id/keep_screen_awake"
                    style="@style/Checkbox"
                    android:text="@string/label_keep_screen_awake" />

                <View style="@style/SeparatorListVertical" />

                <LinearLayout style="@style/VerticalList_BG2">

                    <TextView
                        style="@style/Text"
                        android:text="@string/label_app_zoom" />

                    <View style="@style/SeparatorListVertical" />

                    <LinearLayout style="@style/HorizontalList">

                        <EditText
                            android:id="@+id/zoom"
                            style="@style/EditText"
                            android:layout_weight="1"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="3"
                            android:text="100" />

                        <View style="@style/SeparatorListHorizontal" />

                        <TextView
                            style="@style/Text"
                            android:layout_width="wrap_content"
                            android:text="@string/label_zoom_unit" />
                    </LinearLayout>
                </LinearLayout>
            </com.rama.txori_zero.widgets.WdCollapsibleSection>

            <View style="@style/SeparatorListVertical" />

            <com.rama.txori_zero.widgets.WdCollapsibleSection
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultExpanded="true"
                app:header="@string/header_notifications"
                app:key="settings:section:notifications">

                <com.rama.txori_zero.widgets.WdCheckbox
                    android:id="@+id/notify_sounds"
                    style="@style/Checkbox"
                    android:text="@string/label_play_sounds" />

                <View style="@style/SeparatorListVertical" />

                <com.rama.txori_zero.widgets.WdCheckbox
                    android:id="@+id/notify_vibrate"
                    style="@style/Checkbox"
                    android:text="@string/label_vibrate" />

                <View style="@style/SeparatorListVertical" />

                <com.rama.txori_zero.widgets.WdCheckbox
                    android:id="@+id/notify_flash"
                    style="@style/Checkbox"
                    android:text="@string/label_flash_screen" />

                <View
                    android:id="@+id/notify_camera_separator"
                    style="@style/SeparatorListVertical" />

                <com.rama.txori_zero.widgets.WdCheckbox
                    android:id="@+id/notify_camera"
                    style="@style/Checkbox"
                    android:text="@string/label_camera_flash" />
            </com.rama.txori_zero.widgets.WdCollapsibleSection>

            <View
                android:id="@+id/themes_separator"
                style="@style/SeparatorListVertical" />

            <com.rama.txori_zero.widgets.WdCollapsibleSection
                android:id="@+id/themes_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultExpanded="true"
                app:header="@string/header_themes"
                app:key="settings:section:appearance">

                <com.rama.txori_zero.widgets.WdRadioGroup
                    android:id="@+id/theme_group"
                    style="@style/VerticalList_BG2" />
            </com.rama.txori_zero.widgets.WdCollapsibleSection>

            <View
                android:id="@+id/data_separator"
                style="@style/SeparatorListVertical" />

            <com.rama.txori_zero.widgets.WdCollapsibleSection
                android:id="@+id/data_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultExpanded="true"
                app:header="@string/header_data"
                app:key="settings:section:data">

                <Button
                    android:id="@+id/export_button"
                    style="@style/BTN"
                    android:text="@string/btn_export_backup" />

                <View style="@style/SeparatorListVertical" />

                <Button
                    android:id="@+id/import_button"
                    style="@style/BTN"
                    android:text="@string/btn_import_backup" />
            </com.rama.txori_zero.widgets.WdCollapsibleSection>
        </LinearLayout>
    </ScrollView>

    <View style="@style/Separator" />

    <Button
        android:id="@+id/go_about"
        style="@style/BTN"
        android:text="@string/btn_about" />

    <View style="@style/SeparatorListVertical" />

    <Button
        android:id="@+id/go_back"
        style="@style/BTN"
        android:text="@string/btn_go_back" />
</LinearLayout>
