<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog_Root">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/H2_Center" />

    <View style="@style/SeparatorListVertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout style="@style/VerticalList_BG2">

            <TextView
                style="@style/Text"
                android:text="@string/label_task_label" />

            <View style="@style/SeparatorListVertical" />

            <AutoCompleteTextView
                android:id="@+id/task_label"
                style="@style/EditText"
                android:completionThreshold="1"
                android:focusableInTouchMode="true" />

            <View style="@style/SeparatorListVertical" />

            <TextView
                style="@style/Text"
                android:text="@string/label_task_duration" />

            <View style="@style/SeparatorListVertical" />

            <EditText
                android:id="@+id/task_duration"
                style="@style/EditText"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="6" />

            <View style="@style/SeparatorListVertical" />

            <TextView
                style="@style/Text"
                android:text="@string/label_rest_duration" />

            <View style="@style/SeparatorListVertical" />

            <EditText
                android:id="@+id/task_rest"
                style="@style/EditText"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="6" />

            <View style="@style/SeparatorListVertical" />

            <TextView
                style="@style/Text"
                android:text="@string/label_group" />

            <View style="@style/SeparatorListVertical" />

            <com.rama.txori_zero.widgets.WdRadioGroup
                android:id="@+id/task_groups"
                style="@style/VerticalList" />
        </LinearLayout>
    </ScrollView>

    <View style="@style/SeparatorListVertical" />

    <Button
        android:id="@+id/yes_button"
        style="@style/BTN"
        android:text="@string/btn_save" />

    <View style="@style/SeparatorListVertical" />

    <Button
        android:id="@+id/delete_button"
        style="@style/BTN_danger"
        android:text="@string/btn_delete_task" />

    <include layout="@layout/dialog_cancel_button" />
</LinearLayout>
