<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog_Root">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/H2_Center" />

    <View style="@style/SeparatorListVertical" />

    <LinearLayout style="@style/VerticalList_BG2">

        <TextView
            style="@style/Text"
            android:text="@string/label_group_name" />

        <View style="@style/SeparatorListVertical" />

        <EditText
            android:id="@+id/edit_text"
            style="@style/EditText"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <View style="@style/SeparatorListVertical" />

    <Button
        android:id="@+id/yes_button"
        style="@style/BTN"
        android:text="@string/btn_save" />

    <View style="@style/SeparatorListVertical" />

    <Button
        android:id="@+id/delete_button"
        style="@style/BTN_danger"
        android:text="@string/btn_delete_group" />

    <include layout="@layout/dialog_cancel_button" />
</LinearLayout>
