<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/VerticalList"
    android:background="@color/surface_1"
    android:padding="@dimen/space_between_elements">

    <LinearLayout style="@style/HorizontalList">

        <FrameLayout
            android:id="@+id/edit_session_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp">

            <ImageView
                style="@style/Icon18"
                android:contentDescription="@string/alt_edit"
                android:src="@drawable/px_edit"
                android:tag="accent" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ascend_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp">

            <ImageView
                style="@style/Icon18"
                android:contentDescription="@string/alt_move_up"
                android:src="@drawable/px_chevron_up" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/descend_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp">

            <ImageView
                style="@style/Icon18"
                android:contentDescription="@string/alt_move_down"
                android:src="@drawable/px_chevron_down" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/add_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp">

            <ImageView
                style="@style/Icon18"
                android:contentDescription="@string/alt_add_task"
                android:src="@drawable/px_plus"
                android:tag="accent" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/group_label"
        style="@style/H3"
        android:background="@color/surface_0"
        android:padding="@dimen/space_between_elements" />
</LinearLayout>
